deploy/4_ingress/2_rabbitmq/0_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
spec:
  tls:
    - hosts:
        - rabbitmq.hoshi-note.ixk.me
      secretName: rabbitmq-hoshi-note-tls
  rules:
    - host: rabbitmq.hoshi-note.ixk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
